# mcp-chat-client

backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: __init__.py  agent.py  config.py  main.py  schemas.py
frontend/: package.json  pnpm-lock.yaml  types.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: chat-interface.tsx  mcp-selector.tsx  message-input.tsx  message-list.tsx
